# canastra

./: .gitignore  .pre-commit-config.yaml  README.md  REFACTOR.md  UV_SETUP.md  __init__.py  app.py  benchmark_bot.py  card.py  constants.py  engine.py  game.py  game_helpers.py  landing.py  main.py  pyproject.toml  rules.md  ui_components.py
.cursor/rules/: ruff-and-style.mdc
.github/workflows/: pytest.yml
.streamlit/: config.toml
scripts/: benchmark_bot.py
src/canastra/: __init__.py
src/canastra/core/: __init__.py  constants.py  engine.py  game.py  game_helpers.py  rules_loader.py
src/canastra/ui/: __init__.py  landing.py  ui_components.py
tests/: __init__.py  test_integration.py  test_play_and_validate.py
