[project]
name = "canastra"
version = "0.1.0"
description = "An AI player for the Canastra (Canasta) card game"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.28.0",
]
authors = [
    {name = "Gabriel Ristow"}
]
keywords = ["canastra", "card-game", "ai", "game-player"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

[project.scripts]
canastra = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# When Streamlit Community Cloud uses Poetry for dependency install,
# only install deps; do not try to install this project as a package.
[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=7.4.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["."]
exclude = ["__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "README.md",
]
exclude = [
    "__pycache__",
    "*.pyc",
]
