[project]
name = "canastra"
version = "0.1.0"
description = "An AI player for the Canastra card game"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.28.0",
    "tqdm>=4.66.0",
]
authors = [
    {name = "Gabriel Ristow"}
]
keywords = ["canastra", "card-game", "ai", "game-player"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

[project.scripts]
canastra = "main:main"

[tool.hatch.build.targets.sdist]
include = [
    "src/canastra/**/*.py",
    "src/canastra/core/rules.md",
    "README.md",
]
exclude = ["__pycache__", "*.pyc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# When Streamlit Community Cloud uses Poetry for dependency install,
# only install deps; do not try to install this project as a package.
[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=7.4.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests", "app.py", "main.py", "scripts"]
exclude = ["__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

# app.py sets sys.path before importing canastra for Streamlit Cloud (package not installed)
[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/canastra"]
